k8s/namespace-configmap-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: imss-ai-suite
  labels:
    name: imss-ai-suite
    app: imss-medical-ai
